# database-insight

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
database_insight/: cli.py
database_insight/adapters/: __init__.py  toad_parser.py
database_insight/models/: __init__.py  schema.py
docs/: CLI-EXPLAINED-FOR-NON-PYTHON-DEVS.md  TECHNICAL_ARCHITECTURE.md  database-insight-user-guide.md
docs/techdocs/: 00-framework-overview.md  api-forge-technical-design.md  combined-tech-docs.md  database-insight-technical-design.md
